# cabot-ble-server

./: .dockerignore  .env  .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  bake-docker.sh  ble.py  build.sh  cabot-ble-server  cabot-ble-server.service  cabot_ace_battery_control.py  cabot_ace_battery_control_node.py  cabot_app.py  cabot_ble.py  cabot_log_report.py  common.py  dgatt.py  docker-compose-prodimg.yaml  docker-compose.yaml  entrypoint.sh  install.sh  launch.sh  main.conf  recover_usb.sh  requirements.txt  setup_bluetooth_conf.sh  simple.py  tcp.py  uninstall.sh
.devcontainer/: devcontainer.json
.github/workflows/: build.yaml  push_action.yaml
cabot/: __init__.py
cabot_ace/: cabot_ace_battery_driver.py  cabot_ace_battery_driver_node.py
cabot_app_server/: CMakeLists.txt  package.xml
cabot_app_server/cabot/: util.py
cabot_app_server/cabot_ace/: __init__.py  cabot_ace_battery_driver.py  cabot_ace_battery_driver_node.py  cabot_ace_odrive_power.py
cabot_app_server/launch/: launch.yaml
cabot_app_server/scripts/: ble.py  cabot_app.py  cabot_log_report.py  common.py  tcp.py
cabot_ui/: __init__.py  event.py  status.py
docker/ros2/: Dockerfile  launch.sh  requirements.txt  ros_entrypoint.sh
power_controller_ace/: CMakeLists.txt  package.xml
power_controller_ace/power_controller_ace/: driver.py
power_controller_ace/scripts/: power_controller_node.py
script/: cabot_app.sh  cabot_build.sh
